branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/style.css
/* ... */
.login-submit:hover {background:#0081e6;}


/* USER POP */
.userpop {position:absolute; top:11px; left:752px; width:175px; z-index:11;}
.usertop {width:44px; height:34px; padding:8px 0 0 8px; margin-left:123px; background:url(../images/arrow-white_down.png) no-repeat 39px center #454544; -moz-border-radius-topleft:3px; -moz-border-radius-topright:3px; -webkit-border-top-left-radius:3px; -webkit-border-top-right-radius:3px; border-top-left-radius:3px; border-top-right-radius:3px;}
.usertop img {border:1px solid #888b87;}
.userbox {width:158px; padding:10px 0 18px 17px; background:url(../images/search-bg.png); font-size:14px; color:#d4d4d4; font-weight:700;
-moz-border-radius-bottomleft:3px;  -webkit-border-bottom-left-radius:3px; border-bottom-left-radius:3px;
-moz-border-radius-bottomright:3px;  -webkit-border-bottom-right-radius:3px; border-bottom-right-radius:3px;
-moz-border-radius-topleft:3px; -webkit-border-top-left-radius:3px; border-top-left-radius:3px;}
.userbox ul {list-style:none;}
.userbox li {height:28px;}
.userbox a {height:18px; padding-top:10px; font-size:14px; font-weight:700; color:#fff; display:inline-block;}
.userbox a:hover {border-bottom:1px dashed #fff;}


/* ------------------------------------------------------------------------------------------------------- */









/* HEADLINES - page title area under the menu ---------------------------------- */

.headline {margin-bottom:22px;}
.headline:after {content:"."; display:block; height:0; clear:both; visibility:hidden;}
.headline {display:inline-block;}
* html .headline {height:1%;}
.headline {display:block;}

/* for the "grid" layout */
.headline.formmargin {margin-right:10px;}

.headline h1 {float:left; display:inline; width:auto; margin-right:30px;}
.headline .view {float:left; width:234px; height:34px; background:url(../images/view-bg.png) no-repeat 3px 3px; margin-right:16px;}
.headline .show {float:left; display:inline; height:26px; padding-top:8px; font:12px "Lucida Grande", Arial, sans-serif; vertical-align:middle;}
.headline .divider {float:left; height:30px; width:15px; margin-right:15px; border-right:1px dotted #333;}

/* for the contest page */
.headline.contest-page {margin-bottom:14px;}
.headline .contest-image {float:left; width:52px; height:52px; margin:-12px 15px 0 0;}
.headline .days-left {float:right; width:300px; text-align:right; vertical-align:middle; line-height:normal;}
.headline .days-left span {font-size:24px; font-weight:700; color:#e36f0f; padding-right:5px; vertical-align:middle;}

/* second headline area on the contest page */
.headline.subhead {margin:50px 0 15px 0; padding-left:15px;}
.headline h2 {float:left; display:inline; width:auto; font-weight:400; color:#404040;}
.headline h2 span {font-size:33px; font-weight:700; color:#66b035;}
.subhead .right {float:right; width:300px; text-align:right;}

/* for the proposal pages */
.headline.prophead {margin:10px 0 15px 0; padding-left:15px;}
.headline.propsubhead {margin:70px 0 15px 0; padding-left:15px;}
.prop-butt {float:right; width:475px; text-align:left;}
.prop-butt img {vertical-align:middle; padding-right:10px;}
.comm-butt {float:right; width:715px; text-align:left;}
.comm-butt img {vertical-align:middle; padding-right:10px;}

/* for the ADD a proposal page */
.headline.addprop {width:616px; margin-right:368px; line-height:24px; margin-bottom:30px; color:#000;}
.headline.addprop a {font-weight:700;}

/* ------------------------------------------------------------------------------------------------------- */







/* THE BLUE HEADERBAR ------------------------------------------------------------------------- */

/* blue header bar ------------- */
.blueheaderbar {height:37px; background:#e7f1f5; border-top:1px solid #a7d7fb; border-bottom:1px solid #9cbcca; color:#404040;}
.blueheaderbar a {font-weight:700;}

/* list page */
.blueheaderbar .contest {float:left; width:377px; height:37px; padding-left:9px;}
.blueheaderbar .contest a {padding-top:10px; height:27px; display:inline-block;}
.blueheaderbar .proposal {float:left; width:47px; height:37px;}
.blueheaderbar .proposal a {background:url(../images/icon-list-proposals.png) no-repeat 9px 7px; width:47px; height:37px; display:inline-block;}
.blueheaderbar .comment {float:left; width:52px; height:37px;}
.blueheaderbar .comment a {background:url(../images/icon-list-comment.png) no-repeat 9px 8px; width:52px; height:37px; display:inline-block;}
.blueheaderbar .what {float:left; width:175px; height:37px;background:url(../images/icon-list-what.png) no-repeat 10px 6px; }
.blueheaderbar .what a {height:27px; padding-top:10px; margin-left:41px; display:inline-block;}
.blueheaderbar .where {float:left;  width:162px; height:37px;background:url(../images/icon-list-where.png) no-repeat 10px 6px; }
.blueheaderbar .where a {height:27px; padding-top:10px; margin-left:41px; display:inline-block;}
.blueheaderbar .who {float:left; width:162px; height:37px;background:url(../images/icon-list-who.png) no-repeat 10px 6px; }
.blueheaderbar .who a {height:27px; padding-top:10px; margin-left:33px; display:inline-block;}

/* proposal page */
.blueheaderbar .proposalname {float:left; width:675px; height:37px; padding-left:9px;}
.blueheaderbar .proposalname a {padding-top:10px; height:27px; display:inline-block;}
.blueheaderbar .thumbs {float:left; width:67px; height:37px;}
.blueheaderbar .thumbs a {background:url(../images/icon-proposal-thumb.png) no-repeat 0 7px; width:20px; height:37px; display:inline-block;}
.blueheaderbar .propcomm {float:left; width:65px; height:37px;}
.blueheaderbar .propcomm a {background:url(../images/icon-list-comment.png) no-repeat 0 8px; width:24px; height:37px; display:inline-block;}
.blueheaderbar .modified {float:left; width:70px; height:37px;}
.blueheaderbar .modified a {padding-top:10px; height:27px; display:inline-block;}
.blueheaderbar .contributor {float:left; width:88px; height:37px;}
.blueheaderbar .contributor a {padding-top:10px; height:27px; display:inline-block;}
/* ... */

